Homepage scrolling update

--- a/TravelTrail/index.html
+++ b/TravelTrail/index.html
@@ -16,6 +16,8 @@
 
 <body>
 
+    <div id="home">
+
     <div id="header">
         <div id="left-nav">
             <a href="index.html">
@@ -27,9 +29,9 @@
         </div>
 
         <div id="right-nav">
-            <a class="nav-link" href="#">Home</a>
-            <a class="nav-link" href="#">About</a>
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#home">Home</a>
+            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="#contact">Contact</a>
             <div class="user-profile"></div>
         </div>
     </div>
@@ -52,6 +54,12 @@
             <a href="https://www.twitter.com/"><i class="fa fa-twitter"></i></a>
         </div>
     </div>
+
+    </div>
+
+    <div id="about"></div>
+
+    <div id="contact"></div>
 
 </body>
 
