Changed button link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 TravelTrail...</h3>
         </div>
 
-        <button type="button" class="explore-btn" onclick="window.location.href='packages.html'">Explore Now!</button>
+        <button type="button" class="explore-btn" onclick="window.location.href='packages.php'">Explore Now!</button>
 
         <div id="socials">
             <div class="social-icons">
